--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -640,3 +640,19 @@ footer{
         width: 100%;
     }
 }
+.icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    background-color: #007bff; /* Vibrant blue */
+    color: #ffffff; /* White */
+}
+
+.icon:hover {
+    color: #ffffff; /* Adjust hover color here */
+}
