--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -169,7 +169,7 @@ nav{
     display: flex;
     justify-content: center;
     align-content: center;
-    min-height: 80vh;
+    min-height: 100vh;
     flex-direction: column;
     width: 50%;
     padding-left: 20px;
@@ -352,7 +352,7 @@ h3{
 .skills-list{
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 15px;
 }
 .skills-list span{
     font-size: 14px;
@@ -363,9 +363,14 @@ h3{
 }
 
 /* ----- PROJECTS BOX ----- */
+.projects{
+    height: 100%;
+    background-color: #f0f0f0; /* Change the background color as needed */
+}
 .project-container{
     display: flex;
     width: 100%;
+    height:100%;
     justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
@@ -452,51 +457,6 @@ h3{
     z-index: 2;
 }
 
-/* ----- CONTACT FORM ----- */
-.form-control{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-}
-.form-inputs{
-    display: flex;
-    gap: 10px;
-    width: 100%;
-}
-.input-field{
-    width: 50%;
-    height: 55px;
-    background: transparent;
-    border: 2px solid #AAA;
-    border-radius: 10px;
-    padding-inline: 20px;
-    outline: none;
-}
-textarea{
-    width: 100%;
-    height: 250px;
-    background: transparent;
-    border: 2px solid #AAA;
-    border-radius: 10px;
-    padding: 15px 20px;
-    outline: none;
-    resize: none;
-}
-.form-button>.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--second-color);
-    color: var(--color-white);
-}
-.form-button>.btn:hover{
-    background: #00B5E7;
-}
-.form-button i{
-    font-size: 18px;
-    rotate: -45deg;
-}
 
 /* ----- FOOTER BOX ----- */
 footer{
