--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -313,18 +313,20 @@ h3{
 }
 
 /* ----- ABOUT INFO ----- */
-.about-info{
+.about-info {
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center; /* Center horizontally */
     flex-direction: column;
-    padding-block: 30px 70px;
-    padding-inline: 20px;
+    padding: 30px 20px; /* Adjust padding */
     width: 100%;
+    height: 100vh; /* Set height to fill the window */
     background: var(--color-white);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     border-radius: 20px;
 }
+
 .about-info p{
     text-align: center;
     font-size: 15px;
@@ -365,7 +367,6 @@ h3{
 /* ----- PROJECTS BOX ----- */
 .section{
     min-height: 100vh;
-    background-color: #f0f0f0; /* Change the background color as needed */
 }
 .project-container{
     display: flex;
