--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -245,23 +245,6 @@ nav{
     gap: 30px;
 }
 
-.icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    background-color: black;
-    color: white;
-}
-
-.icon:hover {
-    color: #555; /* Adjust hover color here */
-}
-
 
 
 /* ----- FEATURED IMAGE BOX ----- */
@@ -276,7 +259,7 @@ nav{
     margin: auto 0;
     width: 380px;
     height: 380px;
-    animation: imgFloat 7s ease-in-out infinite;
+    animation: blur ;
 }
 .image img{
     width: 380px;
