--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -362,6 +362,11 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     padding: 10px; /* Add padding */
 }
+.mission{
+    width:500px;
+    height:400px;
+    float:right;
+}
 
 /* ----- ABOUT / SKILLS BOX ----- */
 .skills-box{
