--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -337,6 +337,7 @@ h3{
 /* ----- ABOUT INFO ----- */
 .card {
     position: relative;
+
     width: 350px;
     height: 450px;
     border-radius: 14px;
@@ -347,7 +348,7 @@ h3{
     align-items: center;
     justify-content: center;
     box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
-    ;
+    
   }
   
   .card h1 {
@@ -369,7 +370,7 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
 }
 .mission.h{
-    padding-top: 70px;
+    padding-top: 100px;
     
     font-size: 30px;
     font-weight: 600;
@@ -378,7 +379,9 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-family: 'CustomFont', Roboto condensed;
 }
 h2{
-    margin-top: 70px;
+    margin-top: 100px;
+    margin-bottom: 10px;
+
 }
 
 /* ----- ABOUT / SKILLS BOX ----- */
