--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -335,53 +335,124 @@ h3{
 }
 
 /* ----- ABOUT INFO ----- */
-.card {
+.e-card {
+    margin: 100px auto;
+    background: transparent;
+    box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
     position: relative;
-
-    width: 350px;
-    height: 450px;
-    border-radius: 14px;
-    z-index: 1111;
+    width: 800px; /* Updated width to 600px */
+    height: 450px; /* Updated height to 400px */
+    border-radius: 16px;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
-    
   }
   
-  .card h1 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.card .aboutme {
-    color: black;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 18px;
-    padding: 10px; /* Add padding */
-}
-.mission {
-    
-    display: flex; /* Use flexbox layout */
-    justify-content: center; /* Align items to the end of the flex container (right side) */
-   
-}
-.mission.h{
-    padding-top: 100px;
-    
-    font-size: 30px;
+  .wave {
+    position: absolute;
+    width: 800px; /* Updated width to 800px */
+    height: 1000px; /* Updated height to 1000px */
+    opacity: 0.6;
+    left: 0;
+    top: 0;
+    margin-left: -50%;
+    margin-top: -70%;
+    background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
+  }
+  
+  .icon {
+    width: 3em;
+    margin-top: -1em;
+    padding-bottom: 1em;
+  }
+  
+  .infotop {
+    text-align: center;
+    font-size: 20px;
+    position: absolute;
+    top: 5.6em;
+    left: 0;
+    right: 0;
+    color: rgb(255, 255, 255);
     font-weight: 600;
-    color: var(--text-color-second);
-    margin-block: 20px;
-    font-family: 'CustomFont', Roboto condensed;
+  }
+  
+  .name {
+    font-size: 14px;
+    font-weight: 100;
+    position: relative;
+    top: 1em;
+    text-transform: lowercase;
+  }
+  
+  .wave:nth-child(2),
+  .wave:nth-child(3) {
+    top: 210px;
+  }
+  
+  .playing .wave {
+    border-radius: 40%;
+    animation: wave 3000ms infinite linear;
+  }
+  
+  .wave {
+    border-radius: 40%;
+    animation: wave 55s infinite linear;
+  }
+  
+  .playing .wave:nth-child(2) {
+    animation-duration: 4000ms;
+  }
+  
+  .wave:nth-child(2) {
+    animation-duration: 50s;
+  }
+  
+  .playing .wave:nth-child(3) {
+    animation-duration: 5000ms;
+  }
+  
+  .wave:nth-child(3) {
+    animation-duration: 45s;
+  }
+  
+  @keyframes wave {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+/* Container to hold buttons and messages */
+.container {
+  display: flex;
+  flex-direction: column;
 }
-h2{
-    margin-top: 100px;
-    margin-bottom: 10px;
 
+/* Container for each button and message */
+.button-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style for buttons */
+button {
+  width: 100px; /* Set the width of the buttons */
+  margin-bottom: 10px; /* Add space between buttons */
+}
+
+/* Hide all messages initially */
+.message {
+  display: none;
+  margin-left: 10px; /* Add margin for spacing */
+}
+.message {
+  display: none;
+  position: absolute;
+  left: calc(100% + 10px); /* Position the message to the right of the button */
+  top: 0;
+  margin-left: 10px; /* Add margin for spacing */
 }
 
 /* ----- ABOUT / SKILLS BOX ----- */
