--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -462,11 +462,8 @@ button {
 .skills-header{
     margin-bottom: 30px;
 }
-.skills{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
+
+
 .card {
     width: 195px;
     height: 285px;
@@ -543,6 +540,83 @@ button {
   .card:hover {
     transform: scale(1.04) rotate(-1deg);
   }
+  .card1 {
+    width: 195px;
+    height: 285px;
+    background: #313131;
+    border-radius: 20px;
+    ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transition: 0.2s ease-in-out;
+  }
+  
+  .img {
+    height: 30%;
+    position: absolute;
+    transition: 0.2s ease-in-out;
+    z-index: 1;
+  }
+  
+  .textBox {
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    transition: 0.2s ease-in-out;
+    z-index: 2;
+  }
+  
+  .textBox > .text {
+    font-weight: bold;
+  }
+  
+  .textBox > .head {
+    font-size: 20px;
+  }
+  
+  .textBox > .price {
+    font-size: 17px;
+  }
+  
+  .textBox > span {
+    font-size: 12px;
+    color: lightgrey;
+  }
+  
+  .card1:hover > .textBox {
+    opacity: 1;
+  }
+  
+  .card1:hover > .img {
+    height: 65%;
+    filter: blur(7px);
+    animation: anim 3s infinite;
+  }
+  
+  @keyframes anim {
+    0% {
+      transform: translateY(0);
+    }
+  
+    50% {
+      transform: translateY(-20px);
+    }
+  
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  .card1:hover {
+    transform: scale(1.04) rotate(-1deg);
+  }
+  
   
   
 /* ----- PROJECTS BOX ----- */
