--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -465,8 +465,8 @@ button {
 .skills {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+    /* justify-content: space-between; */
+    gap: 10px;
     padding: 20px;
   }
   
