--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -371,24 +371,23 @@ h3{
 .e-card {
     margin: 100px auto;
     background: transparent;
-    box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
+    /* box-shadow: 0px 8px 28px -9px rgba(143, 130, 130, 0.45); */
     position: relative;
-    width: 800px; /* Updated width to 600px */
+    width: 900px; /* Updated width to 600px */
     height: 450px; /* Updated height to 400px */
     border-radius: 16px;
     overflow: hidden;
+    animation: shadow-pop-tr 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
   }
-  
-  .wave {
-    position: absolute;
-    width: 800px; /* Updated width to 800px */
-    height: 1000px; /* Updated height to 1000px */
-    opacity: 0.6;
-    left: 0;
-    top: 0;
-    margin-left: -50%;
-    margin-top: -70%;
-    background: linear-gradient(744deg,#af40ff,#5b42f3 60%,#00ddeb);
+  @keyframes shadow-pop-tr {
+    0% {
+      box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+      transform: translateX(0) translateY(0);
+    }
+    100% {
+      box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e, 4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e, 8px -8px #3e3e3e;
+      transform: translateX(-8px) translateY(8px);
+    }
   }
   
   .icon {
