--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -351,7 +351,7 @@ nav{
 .top-header{
     text-align: center;
     margin-bottom: 5em;
-    margin-top: 0%;
+    margin-top: 0;
 }
 .top-header h1{
     font-weight: 600;
@@ -374,7 +374,7 @@ h3{
     background: darkgray;
     /* box-shadow: 0px 8px 28px -9px rgba(143, 130, 130, 0.45); */
     position: relative;
-    padding: 20px;
+    /* padding: 20px; */
     width: 900px; /* Updated width to 600px */
     height: 450px; /* Updated height to 400px */
     border-radius: 16px;
@@ -391,15 +391,10 @@ h3{
       transform: translateX(-8px) translateY(8px);
     }
   }
-  
-  .icon {
-    width: 3em;
-    margin-top: -1em;
-    padding-bottom: 1em;
-  }
-  
+ 
   .infotop {
     text-align: center;
+    margin-top: 0;
     margin-bottom: 20px; /* Add bottom margin for spacing */
     font-size: 20px;
     position: absolute;
@@ -617,7 +612,7 @@ h3{
 
 .card {
   --border-radius: 0.75rem;
-  --primary-color: #7257fa;
+  --primary-color: #505052;
   --secondary-color: #3c3852;
   width: 210px;
   font-family: "Arial";
@@ -808,14 +803,14 @@ h3{
     flex-direction: column;
     gap: 10px;
     max-width: 350px;
-    background-color: #355891;
+    background-color: #646668;
     padding: 20px;
     border-radius: 10px;
     position: relative;
   }
   
   .message {
-    color: #355891;
+    color: #5c5c5e;
     font-size: 14px;
   }
   
@@ -833,7 +828,7 @@ h3{
     width: 100%;
     padding: 10px 10px 20px 10px;
     outline: 0;
-    border: 1px solid #355891;
+    border: 1px solid #3e3e3f;
     border-radius: 5px;
   }
   
@@ -841,7 +836,7 @@ h3{
     position: absolute;
     left: 10px;
     top: 15px;
-    color: #355891;
+    color: #3e3f3f;
     font-size: 0.9em;
     cursor: text;
     transition: 0.3s ease;
@@ -866,7 +861,7 @@ h3{
     width: 100%;
     padding: 10px 10px 20px 10px;
     outline: 0;
-    border: 1px solid #355891;
+    border: 1px solid #4e4f50;
     border-radius: 5px;
   }
   
@@ -874,7 +869,7 @@ h3{
     position: absolute;
     left: 10px;
     top: 50px;
-    color: #355891;
+    color: #525353;
     font-size: 0.9em;
     cursor: text;
     transition: 0.3s ease;
@@ -897,10 +892,10 @@ h3{
   
   .fancy {
     background-color: white;
-    border: 2px solid #355891;
+    border: 2px solid #434344;
     border-radius: 0px;
     box-sizing: border-box;
-    color: #355891;
+    color: #434344;
     cursor: pointer;
     display: inline-block;
     font-weight: 390;
@@ -922,7 +917,7 @@ h3{
     content: " ";
     width: 1.7rem;
     height: 2px;
-    background: #355891;
+    background: #5b5b5c;
     top: 50%;
     left: 1.5em;
     position: absolute;
@@ -941,7 +936,7 @@ h3{
     transition: all 0.3s ease-in-out;
     text-transform: lowercase;
     text-decoration: none;
-    color: #355891;
+    color: #545557;
     transform: translateX(30%);
   }
   
@@ -951,7 +946,7 @@ h3{
     top: -2px;
     left: 0.625rem;
     position: absolute;
-    background: #355891;
+    background: #545455;
     transition: width 0.5s ease-out, left 0.3s ease-out;
   }
   
@@ -961,7 +956,7 @@ h3{
     right: 1.875rem;
     bottom: -2px;
     position: absolute;
-    background: #355891;
+    background: #525353;
     transition: width 0.5s ease-out, right 0.3s ease-out;
   }
   
@@ -971,18 +966,18 @@ h3{
     right: 0.625rem;
     bottom: -2px;
     position: absolute;
-    background: #355891;
+    background: #4e4f50;
     transition: width 0.5s ease-out, right 0.3s ease-out;
   }
   
   .fancy:hover {
-    color: #355891;
-    background: #5f82a9;
+    color: #424344;
+    background: #6f6f70;
   }
   
   .fancy:hover::before {
     width: 1.5rem;
-    background: #355891;
+    background: #5f6061;
   }
   
   .fancy:hover .text {
