--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -555,7 +555,6 @@ h3{
     height: 100%;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
-    background-color: blueviolet;
   }
   
   .card1__descr-wrapper {
@@ -675,129 +674,7 @@ h3{
 .card:hover .card__arrow svg {
   transform: translateX(3px);
 }
-.contactcard {
-    overflow: hidden;
-    position: relative;
-    text-align: left;
-    border-radius: 0.5rem;
-    max-width: 290px;
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    background-color: #fff;
-  }
-  
-  .contactdismiss {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5rem 1rem;
-    background-color: #fff;
-    color: black;
-    border: 2px solid #D1D5DB;
-    font-size: 1rem;
-    font-weight: 300;
-    width: 30px;
-    height: 30px;
-    border-radius: 7px;
-    transition: .3s ease;
-  }
-  
-  .contactdismiss:hover {
-    background-color: #ee0d0d;
-    border: 2px solid #ee0d0d;
-    color: #fff;
-  }
-  
-  .contactheader {
-    padding: 1.25rem 1rem 1rem 1rem;
-  }
-  
-  .contactimage {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #e2feee;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 9999px;
-    animation: animate .6s linear alternate-reverse infinite;
-    transition: .6s ease;
-  }
-  
-  .contactimage svg {
-    color: #0afa2a;
-    width: 2rem;
-    height: 2rem;
-  }
-  
-  .contactcontent {
-    margin-top: 0.75rem;
-    text-align: center;
-  }
-  
-  .contacttitle {
-    color: #066e29;
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.5rem;
-  }
-  
-  .contactmessage {
-    margin-top: 0.5rem;
-    color: #595b5f;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-  
-  .contactactions {
-    margin: 0.75rem 1rem;
-  }
-  
-  .contacthistory {
-    display: inline-flex;
-    padding: 0.5rem 1rem;
-    background-color: #1aa06d;
-    color: #ffffff;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: 500;
-    justify-content: center;
-    width: 100%;
-    border-radius: 0.375rem;
-    border: none;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  }
-  
-  .contacttrack {
-    display: inline-flex;
-    margin-top: 0.75rem;
-    padding: 0.5rem 1rem;
-    color: #242525;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    font-weight: 500;
-    justify-content: center;
-    width: 100%;
-    border-radius: 0.375rem;
-    border: 1px solid #D1D5DB;
-    background-color: #fff;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  }
-  
-  @keyframes animate {
-    from {
-      transform: scale(1);
-    }
-  
-    to {
-      transform: scale(1.09);
-    }
-  }
+
 .form {
     display: flex;
     flex-direction: column;
@@ -997,14 +874,15 @@ h3{
   }
   .socials {
     display: flex;
-   
+    background-color:#323232 ;
+    color: #323232;
     height: 70px;
     width: 270px;
   }
   
   .socials svg {
     position: absolute;
-    color: #242525;
+    color: #323232;
     display: flex;
     width: 60%;
     height: 100%;
@@ -1015,6 +893,9 @@ h3{
     z-index: 2;
     cursor: pointer;
   }
+  .svg{
+    color: #323232;
+  }
   
   .socials .social-link1,.socials .social-link2,.socials .social-link3,.socials .social-link4 {
     position: relative;
@@ -1022,7 +903,7 @@ h3{
     align-items: center;
     justify-content: center;
     width: 25%;
-    color: rgb(10, 10, 10);
+    color: #323232;
     font-size: 24px;
     text-decoration: none;
     transition: 0.25s;
@@ -1075,17 +956,16 @@ h3{
     }
   }
   .card-client {
-    background: #555;
+    background: #f3f2f2;
     width: 130;
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
-    border: 4px solid #fff;
+    border: 4px solid #323232;;
     box-shadow: 0 6px 10px #212121;
     border-radius: 10px;
     text-align: center;
-    color: #fff;
     font-family: "Poppins", sans-serif;
     transition: all 0.3s ease;
   }
@@ -1099,28 +979,32 @@ h3{
     object-fit: cover;
     width: 5rem;
     height: 5rem;
-    border: 4px solid #fff;
+    border: 4px solid #323232;;
     border-radius: 999px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
+    color: #323232;
   }
   
   .user-picture svg {
     width: 2.5rem;
+    color: #323232;
     fill: currentColor;
   }
   
   .name-client {
     margin: 0;
     margin-top: 20px;
+    color: #323232;
     font-weight: 600;
     font-size: 18px;
   }
   
   .name-client span {
     display: block;
+    color: #323232;
     font-weight: 200;
     font-size: 16px;
   }
