--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -607,13 +607,13 @@ h3{
     gap: 50px;
     padding: 20px;
   }
-  /* this card is inspired form this - https://georgefrancis.dev/ */
-/* 
-.card {
+
+
+.card2 {
   --border-radius: 0.75rem;
   --primary-color: #505052;
   --secondary-color: #3c3852;
-  width: 210px;
+  width: 300px;
   font-family: "Arial";
   padding: 1rem;
   cursor: pointer;
@@ -623,27 +623,27 @@ h3{
   position: relative;
 }
 
-.card > * + * {
+.card2 > * + * {
   margin-top: 1.1em;
 }
 
-.card .card__content {
+.card2 .card2__content {
   color: var(--secondary-color);
   font-size: 0.86rem;
 }
 
-.card .card__title {
+.card2 .card2__title {
   padding: 0;
   font-size: 1.3rem;
   font-weight: bold;
 }
 
-.card .card__date {
+.card2 .card2__date {
   color: #6e6b80;
   font-size: 0.8rem;
 }
 
-.card .card__arrow {
+.card2 .card2__arrow {
   position: absolute;
   background: var(--primary-color);
   padding: 0.4rem;
@@ -657,23 +657,23 @@ h3{
   align-items: center;
 }
 
-.card svg {
+.card2 svg {
   transition: 0.2s;
 }
 
 /* hover */
-/* .card:hover .card__title {
+ .card2:hover .card2__title {
   color: var(--primary-color);
   text-decoration: underline;
 }
 
-.card:hover .card__arrow {
+.card2:hover .card2__arrow {
   background: #111;
 }
 
-.card:hover .card__arrow svg {
+.card2:hover .card2__arrow svg {
   transform: translateX(3px);
-} */ 
+} 
 
 .form {
     display: flex;
@@ -872,89 +872,6 @@ h3{
     right: 0;
     width: 0;
   }
-  .socials {
-    display: flex;
-    background-color:#323232 ;
-    color: #323232;
-    height: 70px;
-    width: 270px;
-  }
-  
-  .socials svg {
-    position: absolute;
-    color: #323232;
-    display: flex;
-    width: 60%;
-    height: 100%;
-    font-size: 24px;
-    font-weight: 700;
-    opacity: 1;
-    transition: opacity 0.25s;
-    z-index: 2;
-    cursor: pointer;
-  }
-  .svg{
-    color: #323232;
-  }
-  
-  .socials .social-link1,.socials .social-link2,.socials .social-link3,.socials .social-link4 {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 25%;
-    color: #323232;
-    font-size: 24px;
-    text-decoration: none;
-    transition: 0.25s;
-    border-radius: 50px;
-  }
-  
-  .socials svg {
-    transform: scale(1);
-  }
-  
-  .socials .social-link1:hover {
-    background: #f09433;
-    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-    animation: bounce_613 0.4s linear;
-  }
-  
-  .socials .social-link2:hover {
-    background-color: #00ccff;
-    animation: bounce_613 0.4s linear;
-  }
-  
-  .socials .social-link3:hover {
-    background-color: #5865f2;
-    animation: bounce_613 0.4s linear;
-  }
-  
-  .socials .social-link4:hover {
-    background-color: #12a50b;
-    animation: bounce_613 0.4s linear;
-  }
-  
-  @keyframes bounce_613 {
-    40% {
-      transform: scale(1.4);
-    }
-  
-    60% {
-      transform: scale(0.8);
-    }
-  
-    80% {
-      transform: scale(1.2);
-    }
-  
-    100% {
-      transform: scale(1);
-    }
-  }
   .card-client {
     background: #f3f2f2;
     width: 130;
@@ -1008,69 +925,13 @@ h3{
     font-weight: 200;
     font-size: 16px;
   }
+  .Socials{
+    margin-top: 40px;
+    display: flex;
+    gap: 30px;
+}
   
-  .social-media:before {
-    content: " ";
-    display: block;
-    width: 100%;
-    height: 2px;
-    margin: 20px 0;
-    background: #fff;
-  }
   
-  .social-media a {
-    position: relative;
-    margin-right: 15px;
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .social-media a:last-child {
-    margin-right: 0;
-  }
-  
-  .social-media a svg {
-    width: 1.1rem;
-    fill: currentColor;
-  }
-  
-  /*-- Tooltip Social Media --*/
-  .tooltip-social {
-    background: #262626;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    padding: 0.5rem 0.4rem;
-    border-radius: 5px;
-    font-size: 0.8rem;
-    font-weight: 600;
-    opacity: 0;
-    pointer-events: none;
-    transform: translate(-50%, -90%);
-    transition: all 0.2s ease;
-    z-index: 1;
-  }
-  
-  .tooltip-social:after {
-    content: " ";
-    position: absolute;
-    bottom: 1px;
-    left: 50%;
-    border: solid;
-    border-width: 10px 10px 0 10px;
-    border-color: transparent;
-    transform: translate(-50%, 100%);
-  }
-  
-  .social-media a .tooltip-social:after {
-    border-top-color: #262626;
-  }
-  
-  .social-media a:hover .tooltip-social {
-    opacity: 1;
-    transform: translate(-50%, -130%);
-  }
 /* ----- FOOTER BOX ----- */
 footer{
     display: flex;
@@ -1222,8 +1083,8 @@ footer{
     border-radius: 50%;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
-    background-color: #007bff; /* Vibrant blue */
-    color: #ffffff; /* White */
+    background-color: #787b7e; /* Vibrant blue */
+    color:#131212; /* White */
 }
 
 .icon:hover {
