--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -370,61 +370,36 @@ h3{
 
 /* ----- ABOUT INFO ----- */
 .e-card {
-    margin: 100px auto;
-    background:  rgb(214, 213, 213);
-    /* box-shadow: 0px 8px 28px -9px rgba(143, 130, 130, 0.45); */
-    position: relative;
-    /* padding: 20px; */
-    width: 900px; /* Updated width to 600px */
-    height: 450px; /* Updated height to 400px */
-    border-radius: 16px;
-    overflow: hidden;
-    animation: shadow-pop-tr 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
-  }
-  @keyframes shadow-pop-tr {
-    0% {
-      box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
-      transform: translateX(0) translateY(0);
-    }
-    100% {
-      box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e, 4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e, 8px -8px #3e3e3e;
-      transform: translateX(-8px) translateY(8px);
-    }
-  }
- 
-  .infotop {
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 20px; /* Add bottom margin for spacing */
-    font-size: 20px;
-    position: absolute;
-    top: 5.6em;
-    left: 0;
-    right: 0;
-    color: rgb(255, 255, 255);
-    font-weight: 600;
-  }
-  
-  .name {
-    font-size: 14px;
-    font-weight: 100;
-    color: #313131;
-    position: relative;
-    margin-bottom: 20px;
-  
-  }
-  .heading{
-    margin-top: 20px;
-  }
-  .aboutme{
-    font-size: 14px;
-    font-weight: 100;
-    color: #313131;
-    position: relative;
-    top: 1em;
-  }
-  
-  
+  margin: 100px auto;
+  background:  rgb(214, 213, 213);
+  position: relative;
+  width: 90%;
+  max-width: 900px;
+  height: auto;
+  border-radius: 16px;
+  overflow: hidden;
+  animation: shadow-pop-tr 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+}
+
+.infotop {
+  text-align: center;
+  margin-top: 20px; /* Adjusted margin-top */
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+}
+
+.name, .aboutme {
+  font-size: 14px;
+  font-weight: 100;
+  color: #313131;
+  margin-bottom: 20px;
+}
+
+.heading {
+  margin-top: 20px;
+}
+
 /* ----- ABOUT / SKILLS BOX ----- */
 .skills-box{
     margin: 10px;
